chaned the nav bar and fixed the alignment of the carousel

--- a/app/assets/stylesheets/menu.css
+++ b/app/assets/stylesheets/menu.css
@@ -1,8 +1,9 @@
-@import url(http://fonts.googleapis.com/css?family=Capriola);
+@import url(http://fonts.googleapis.com/css?family=Oswald);
 #cssmenu,
 #cssmenu ul,
 #cssmenu ul li,
-#cssmenu ul li a {
+#cssmenu ul li a,
+#cssmenu #menu-button {
   margin: 0;
   padding: 0;
   border: 0;
@@ -10,97 +11,144 @@
   line-height: 1;
   display: block;
   position: relative;
-  font-family: Capriola, Helvetica, sans-serif;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+#cssmenu:after,
+#cssmenu > ul:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+#cssmenu #menu-button {
+  display: none;
 }
 #cssmenu {
   width: auto;
-  height: 59px;
-  padding-bottom: 4px;
+  border: 3px solid #444444;
+  border-radius: 3px;
+  font-family: 'Oswald', sans-serif;
+  line-height: 1;
+  background: #f7f7f7;
+  box-shadow: 1px 1px 0 #0c0c0c, 2px 2px 0 #0c0c0c, 3px 3px 3px rgba(0, 0, 0, 0.35);
 }
-#cssmenu.align-right {
+#cssmenu > ul {
+  background: url('images/bg.png');
+}
+#cssmenu > ul > li {
+  float: left;
+}
+#cssmenu.align-center > ul {
+  font-size: 0;
+  text-align: center;
+}
+#cssmenu.align-center > ul > li {
+  display: inline-block;
+  float: none;
+}
+#cssmenu.align-right > ul > li {
   float: right;
 }
-#cssmenu.align-right ul li {
-  float: right;
-  margin-right: 0;
-  margin-left: 4px;
+#cssmenu > ul > li > a {
+  padding: 20px 25px;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #444444;
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -ms-transition: all .2s ease;
+  -o-transition: all .2s ease;
+  transition: all .2s ease;
 }
-#cssmenu.align-right ul li:first-child,
-#cssmenu.align-right ul li:first-child > a {
-  border-bottom-right-radius: 3px;
+#cssmenu > ul > li > a:hover,
+#cssmenu > ul > li:hover > a,
+#cssmenu > ul > li.active > a {
+  color: #fd8a17;
 }
-#cssmenu #bg-one,
-#cssmenu #bg-two,
-#cssmenu #bg-three,
-#cssmenu #bg-four {
+#cssmenu #menu-indicator {
   position: absolute;
   bottom: 0;
+  display: block;
+  height: 0;
+  width: 0;
+  border: 5px solid transparent;
+  border-bottom-color: #444444;
+  -webkit-transition: all 0.25s ease-out;
+  -moz-transition: all 0.25s ease-out;
+  -ms-transition: all 0.25s ease-out;
+  -o-transition: all 0.25s ease-out;
+  transition: all 0.25s ease-out;
+}
+#cssmenu.small-screen {
   width: 100%;
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
 }
-#cssmenu #bg-one {
-  height: 10px;
-  background: #0f71ba;
+#cssmenu.small-screen > ul,
+#cssmenu.small-screen.align-center > ul {
+  width: 100%;
+  text-align: left;
 }
-#cssmenu #bg-two {
-  height: 59px;
-  z-index: 2;
-  background: url('images/bg.png');
+#cssmenu.small-screen > ul > li,
+#cssmenu.small-screen.align-center > ul > li {
+  float: none;
+  display: block;
+  border-top: 1px solid rgba(100, 100, 100, 0.1);
 }
-#cssmenu #bg-three {
-  bottom: 4px;
-  height: 55px;
-  z-index: 3;
-  background: #222222;
-  background: -moz-linear-gradient(top, #555555 0%, #222222 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #555555), color-stop(100%, #222222));
-  background: -webkit-linear-gradient(top, #555555 0%, #222222 100%);
-  background: -o-linear-gradient(top, #555555 0%, #222222 100%);
-  background: -ms-linear-gradient(top, #555555 0%, #222222 100%);
-  background: linear-gradient(to bottom, #555555 0%, #222222 100%);
+#cssmenu.small-screen > ul > li > a {
+  padding: 18px 25px;
 }
-#cssmenu #bg-four {
-  bottom: 4px;
-  height: 55px;
-  z-index: 4;
-  background: url('images/bg.png');
+#cssmenu.small-screen > ul > li:after,
+#cssmenu.small-screen > ul > li:before {
+  display: none;
 }
-#cssmenu ul {
-  height: 59px;
-}
-#cssmenu ul li {
-  float: left;
-  margin-right: 4px;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  z-index: 5;
-}
-#cssmenu ul li a {
-  padding: 24px 30px 20px 30px;
-  margin-bottom: 4px;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  color: #eeeeee;
-  font-size: 15px;
+#cssmenu.small-screen #menu-button {
+  display: block;
+  padding: 18px 25px;
+  cursor: pointer;
+  font-size: 14px;
+  text-transform: uppercase;
   text-decoration: none;
-}
-#cssmenu ul li:first-child,
-#cssmenu ul li:first-child > a {
-  border-bottom-left-radius: 3px;
-}
-#cssmenu ul li:hover,
-#cssmenu ul li.active {
-  background: #0f71ba;
-  background: -moz-linear-gradient(top, #3fa4f0 0%, #0f71ba 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3fa4f0), color-stop(100%, #0f71ba));
-  background: -webkit-linear-gradient(top, #3fa4f0 0%, #0f71ba 100%);
-  background: -o-linear-gradient(top, #3fa4f0 0%, #0f71ba 100%);
-  background: -ms-linear-gradient(top, #3fa4f0 0%, #0f71ba 100%);
-  background: linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%);
-}
-#cssmenu ul li a:hover,
-#cssmenu ul li.active > a {
+  color: #444444;
   background: url('images/bg.png');
-  color: #ffffff;
+}
+#cssmenu.small-screen #menu-button.menu-opened {
+  color: #fd8a17;
+}
+#cssmenu.small-screen #menu-button:after {
+  content: "";
+  position: absolute;
+  right: 25px;
+  top: 19.5px;
+  display: block;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  border-top: 2px solid #444444;
+  border-bottom: 2px solid #444444;
+  width: 18px;
+  height: 3px;
+}
+#cssmenu.small-screen #menu-button.menu-opened:after {
+  border-top: 2px solid #fd8a17;
+  border-bottom: 2px solid #fd8a17;
+}
+#cssmenu.small-screen #menu-button:before {
+  content: "";
+  position: absolute;
+  right: 25px;
+  top: 29.5px;
+  display: block;
+  width: 18px;
+  height: 2px;
+  background: #444444;
+}
+#cssmenu.small-screen #menu-button.menu-opened:before {
+  background: #fd8a17;
+}
+#cssmenu.small-screen #menu-indicator {
+  display: none;
 }
